@@ -1,3 +1,7 @@
+   -- added support for profiling (epoll only at the moment while this
+      feature is further fleshed out); user application is required to
+      enable profiling and actually process the resultant data
+
    -- if epoll_wait returns an event we can't handle, delete it.
       this means the application fucked up and lost its state somehow.
       or maybe Danga::Socket did?  still debugging this in Perlbal.
